--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -8,7 +8,7 @@ tile.contenttweaker.energized_well.name=Energized Well
 
 item.contenttweaker.overworldessencel.name=Overworld Essence (Day)
 item.contenttweaker.overworldessencer.name=Overworld Essence (Night)
-item.contenttweaker.skystoneLense.name=Skystone Lense
+item.contenttweaker.skystoneLense.name=Skystone Lens
 item.contenttweaker.infinityegg.name=Infinity Egg
 item.contenttweaker.tekmenu.name=Tek's Abomination by TeknoAXE
 item.contenttweaker.smallgearextrudershape.name=Extruder Shape (Small Gear)
