new ore cluster localizations

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1,4 +1,5 @@
 contenttweaker.part.enriched_egg=%s Enriched Egg
+contenttweaker.part.ore_cluster=%s Ore Cluster
 
 tile.contenttweaker.portalBlockt.name=Overworld Portal Block
 tile.contenttweaker.portalBlockUnt.name=Nether Portal Block
