added new chickens and latticite GTCE fluid

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -44,6 +44,28 @@ entity.niobiumchicken.name=Niobium Chicken
 entity.infinitychicken.name=Infinity Chicken
 entity.ftbchicken.name=FTB Chicken
 
+entity.canolachicken.name=Canola Chicken
+entity.astralchicken.name=Astral Chicken
+entity.resonatingchicken.name=Resonating Chicken
+entity.fluorinechicken.name=Fluorine Chicken
+entity.gassychicken.name=Gassy Chicken
+entity.radonchicken.name=Radon Chicken
+entity.vinteumchicken.name=Vinteum Chicken
+entity.plasticchicken.name=Plastic Chicken
+entity.learningchicken.name=Learning Chicken
+entity.manachicken.name=Mana Chicken
+entity.menrilchicken.name=Menril Chicken
+entity.smogchicken.name=Smog Chicken
+entity.rubberchicken.name=Rubber Chicken
+entity.primalchicken.name=Primal Chicken
+entity.concretechicken.name=Concrete Chicken
+entity.spicechicken.name=Spicey Chicken
+entity.spacechicken.name=Space Chicken
+entity.bloodchicken.name=Bloody Chicken
+entity.porcelainchicken.name=Porcelain Chicken
+entity.polywhatsitchicken.name=Polywhatsit Chicken
+entity.latticitechicken.name=Latticite Chicken
+
 tile.contenttweaker.entropy_infused_ore.name=Entropy-Infused Ore
 tile.contenttweaker.ordo_infused_ore.name=Ordo-Infused Ore
 tile.contenttweaker.ignis_infused_ore.name=Ignis-Infused Ore
