--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -26,3 +26,4 @@ material.cryogenicoxygen=Cryogenic Oxygen
 material.cryogenichydrogen=Cryogenic Hydrogen
 metaitem.circuit.energy_flow.name=Crystal Assembly
 metaitem.circuit.data_control.name=Quantum Assembly
+material.rawlatticite=Raw Latticite
