fix chicken products for glass chicken

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -48,6 +48,7 @@ entity.canolachicken.name=Canola Chicken
 entity.astralchicken.name=Astral Chicken
 entity.resonatingchicken.name=Resonating Chicken
 entity.fluorinechicken.name=Fluorine Chicken
+entity.fluixchicken.name=Fluix Chicken
 entity.gassychicken.name=Gassy Chicken
 entity.radonchicken.name=Radon Chicken
 entity.vinteumchicken.name=Vinteum Chicken
