--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1,5 +1,5 @@
 contenttweaker.part.enriched_egg=%s Enriched Egg
-contenttweaker.part.ore_cluster=%s Ore Cluster
+contenttweaker.part.ore_cluster=Native %s Cluster
 contenttweaker.part.ore_shard=%s Concentrated Blood Shard
 contenttweaker.part.ore_clump=%s Ore Clump
 contenttweaker.part.ore_crystal=%s Crystal
