--- a/resources/interactions/lang/en_us.lang
+++ b/resources/interactions/lang/en_us.lang
@@ -745,7 +745,7 @@ interactions.498eb09c.31031dcd.title=Biomass
 interactions.498eb09c.31031dcd.description=Best catalyst is Botania Petals, but you can double check in JEI if you don't believe us.
 
 interactions.498eb09c.33705eac.title=High Powered Hootch
-interactions.498eb09c.33705eac.text.0=Ethanol can be produced from biomass, which can be in turn produced by plant matter and honey for best results. Honey from rustic apiaries is plentiful and botania flowers can be automed via a jaded amaranthus or by duplicating white petals with mana
+interactions.498eb09c.33705eac.text.0=Ethanol can be produced from biomass, which can be in turn produced by plant matter and honey for best results. Honey from rustic apiaries is plentiful and botania flowers can be automed via a jaded amaranthus or by duplicating white metals with mana
 
 interactions.498eb09c.46ef265b.title=Fluorine
 interactions.498eb09c.46ef265b.description=Can be obtained by electrolyzing many different salts, primarily lepidolite. Can be synthesized renewably from biotite dust. 
